[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-webui-gifmoviemaker"
version = "0.1.0"
description = "Extension to create GIFs and movies in Stable Diffusion WebUI."
authors = [
    { name = "Caio Henrique Pedroso", email = "caioutf@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = setuptools.find_packages()
include_package_data = true

[tool.setuptools.package-data]
"" = ["*.txt", "*.md"]

[tool.setuptools.scripts]
gifmoviemaker = "scripts.gifmoviemaker:main"